# React-FastAPI-Template

./: .gitignore  LICENSE
server/: .gitignore  alembic.ini  pyproject.toml
server/app/data/dao/: user.py
server/app/data/migrations/: env.py
server/app/data/migrations/versions/: a9319254335b_init.py
server/app/data/models/: __init__.py  user.py
server/app/dto/: user.py
server/app/exceptions/: auth.py  base.py
server/app/main/: config.py  ioc.py  web.py
server/app/presentation/api/: __init__.py  auth.py  user.py
server/app/presentation/dependencies/: id_provider.py  stub.py
server/app/presentation/schemas/: auth.py
server/app/services/: jwt_token_processor.py  user_service.py
